--- a/my-app/src/scss/main.scss
+++ b/my-app/src/scss/main.scss
@@ -1,5 +1,4 @@
 @import "./variables";
 @import "bootstrap/scss/bootstrap";
-
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+@import "./fonts/fonts.scss";
 @import "./style.scss";
