--- a/my-app/src/scss/style.scss
+++ b/my-app/src/scss/style.scss
@@ -1,79 +1,757 @@
+body {
+	background: $primary-warm-gray;
+	font-family: "Filson Pro", sans-serif;
+	font-style: normal;
+	@media (max-width: 400px) {
+		font-size: 3.7vw;
+	}
+}
+img {
+	height: auto;
+}
 .p-30 {
-  padding: 30px;
+	padding: 30px;
+	@media screen and (max-width: 400px) {
+		padding-inline: 20px;
+	}
 }
 
 .p-24 {
-  padding: 24px;
+	padding: 24px;
 }
 
 .m-30 {
-  margin: 30px;
+	margin: 30px;
 }
 
 .m-24 {
-  margin: 24px;
+	margin: 24px;
 }
 
 .px-30 {
-  padding-left: 30px;
-  padding-right: 30px;
+	padding-left: 30px;
+	padding-right: 30px;
 }
 
 .px-24 {
-  padding-left: 24px;
-  padding-right: 24px;
+	padding-left: 24px;
+	padding-right: 24px;
 }
 
 .mx-30 {
-  margin-left: 30px;
-  margin-right: 30px;
+	margin-left: 30px;
+	margin-right: 30px;
 }
 
 .mx-24 {
-  margin-left: 24px;
-  margin-right: 24px;
+	margin-left: 24px;
+	margin-right: 24px;
 }
-
-body {
-  font-family: "DM Sans", sans-serif;
-}
-
+// banner section
 .content-area {
-  background-color: $primary-warm-gray;
+	background-color: $primary-warm-gray;
 }
 
 #first-section {
-  background-color: $primary-contrast2;
-  position: relative;
-  min-height: 380px;
+	background-color: $primary-contrast2;
+	position: relative;
+	min-height: 380px;
+	overflow: hidden;
 
-  h1 {
-    font-size: 40px;
-    color: $primary-solar-black;
-    position: absolute;
-    bottom: 113px;
-  }
+	@media (max-width: 400px) {
+		min-height: 360px;
+	}
 
-  h2 {
-    position: absolute;
-    bottom: 37px;
-    line-height: 26px;
-    font-size: 18px;
-  }
+	h1 {
+		font-size: 40px;
+		position: absolute;
+		bottom: 113px;
+		z-index: 1;
+		font-weight: 400;
+		font-family: var(--filson-pro);
+		@media (max-width: 400px) {
+			font-size: 9vw;
+		}
+		@media (min-width: 420px) {
+			line-height: 50px;
+		}
+	}
 
-  .soren {
-    position: absolute;
-    bottom: 0;
-    right: 0;
+	h2 {
+		position: absolute;
+		bottom: 37px;
+		line-height: 26px;
+		font-size: 18px;
+		z-index: 1;
+		font-weight: 500;
+		font-family: var(--dm-sans);
+		@media (max-width: 400px) {
+			font-size: 4.4vw;
+		}
+	}
 
-    @media (max-width: 400px) {
-      width: 50%; // Scale down to 75% for screens below 400px
-    }
-  }
+	.soren {
+		position: absolute;
+		bottom: 0;
+		right: 0;
 
-  .graph-element-1 {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-  }
+		width: 203px;
+		@media (max-width: 400px) {
+			width: 190px !important;
+			height: auto !important;
+			right: -25px;
+		}
+
+		// @media screen and (max-width: 350px) {
+		// 	width: 170px !important;
+		// 	right: -33px;
+		// }
+	}
+
+	.graph-element-1 {
+		position: absolute;
+		bottom: 0;
+		right: 0;
+		@media screen and (max-width: 400px) {
+			width: 90px !important;
+			bottom: -10px;
+		}
+	}
+}
+.main-navbar {
+	position: fixed;
+	top: 0;
+	left: 0;
+	padding-inline: 30px;
+	width: 100%;
+	z-index: 99;
+	top: 15px;
+	padding-block: 15px;
+	transition: all ease 0.3s;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	@media screen and (max-width: 400px) {
+		padding-inline: 20px;
+	}
+	.container {
+		padding-inline: 30px;
+	}
+	@media screen and (max-width: 999px) {
+		.container {
+			padding-inline: 0;
+		}
+	}
+	&.active {
+		// background: $secondary-clear-sky-blue;
+		background: white;
+		top: 0;
+	}
+}
+.help-btn {
+	color: $primary-green-energy;
+	font-family: var(--filson-pro);
+	background: transparent;
+	border: none;
+	box-shadow: none;
+}
+.kontant-tab-section {
+	padding: 24px 0;
+}
+.text-nature-green {
+	color: $primary-nature-green;
+}
+.text-nature-black {
+	color: $primary-solar-black;
+}
+
+// Kontant Tab Section
+.tab-menu {
+	padding: 6px;
+	background-color: $primary-sky-white;
+	border-radius: 999px;
+	display: flex;
+	justify-content: center;
+	position: relative;
+	.activator {
+		transition: all ease 0.3s;
+		background: $primary-green-energy;
+		position: absolute;
+		z-index: 1;
+		border-radius: 99px;
+		width: 142px;
+		height: 44px;
+		left: 6px;
+		top: 6px;
+	}
+	button {
+		font-size: 16px;
+		font-family: var(--dm-sans);
+		color: $primary-solar-black;
+		border: none;
+		padding: 5px 24px;
+		height: 44px;
+		border-radius: 999px;
+		cursor: pointer;
+		width: 50%;
+		position: relative;
+		background: transparent;
+		transition: all ease 0.3s;
+		font-family: var(--filson-pro);
+		font-weight: 400;
+		@media (max-width: 400px) {
+			font-size: 4.5vw;
+		}
+		&.active {
+			color: $primary-sky-white;
+			font-weight: 500;
+		}
+		position: relative;
+		z-index: 2;
+	}
+}
+.kontant-tab-section {
+	padding: 24px 0;
+	.tab-menu {
+		width: 296px;
+		margin: 0 auto;
+	}
+}
+.bg-fafafa {
+	background: $primary-fafafa;
+}
+.tab--content {
+	overflow: hidden;
+	border-radius: 20px;
+	position: relative;
+}
+.tab--content-item {
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 130%;
+	padding: 48px 24px;
+	border-radius: inherit;
+	@media (max-width: 400px) {
+		padding-inline: 12px;
+	}
+	.subtitle {
+		color: $primary-green-energy;
+		font-family: var(--filson-pro);
+		margin: 0;
+		font-weight: 700;
+		margin-bottom: -4px;
+		font-size: 20px;
+		line-height: 130%;
+		@media (max-width: 400px) {
+			font-size: 4.7vw;
+		}
+	}
+	.subtext {
+		font-size: 14px;
+		line-height: 18px;
+		font-weight: 400;
+		@media (max-width: 400px) {
+			font-size: 3.5vw;
+		}
+	}
+	.amount {
+		color: $primary-nature-green;
+		line-height: 1;
+		margin-top: 8px;
+		margin-bottom: 32px;
+		span {
+			font-size: 95px;
+			font-weight: 700;
+		}
+		small {
+			font-size: 14px;
+			font-weight: 400;
+		}
+		@media (max-width: 400px) {
+			span {
+				font-size: 20vw;
+			}
+		}
+	}
+	.sub-amount-wrap {
+		display: flex;
+		justify-content: space-between;
+		&-item {
+			width: 50%;
+			.sub-title {
+				font-size: 14px;
+				color: $primary-green-energy;
+				font-weight: 700;
+				margin-bottom: 8px;
+				@media (max-width: 400px) {
+					font-size: 3.5vw;
+				}
+			}
+			.sub-amount {
+				color: $primary-nature-green;
+				span {
+					line-height: 1;
+					font-size: 32px;
+					@media (max-width: 400px) {
+						font-size: 8vw;
+					}
+					@media (min-width: 430px) {
+						font-size: 36px;
+					}
+					@media (min-width: 600px) {
+						font-size: 40px;
+					}
+				}
+				small {
+					font-size: 14px;
+					font-weight: 400;
+				}
+			}
+		}
+	}
+	transition: all ease 0.5s;
+	&.inactive {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		&:last-child {
+			transform: translateX(calc(100% + 20px));
+		}
+		&:first-child {
+			transform: translateX(calc(-100% - 20px));
+		}
+	}
+}
+// tab arrow
+.tab-arrow-button {
+	display: flex;
+	justify-content: center;
+	margin-top: 24px;
+	padding-bottom: 20px;
+	button {
+		display: flex;
+		align-items: center;
+		gap: 10px;
+		font-size: 20px;
+		background: transparent;
+		color: $primary-solar-black;
+		gap: 8px;
+		background: transparent;
+		outline: none;
+		box-shadow: none;
+		border: none;
+		@media (max-width: 400px) {
+			font-size: 4.7vw;
+			svg {
+				width: 6vw;
+				height: auto;
+			}
+		}
+	}
+}
+// sticky button
+.sticky-button {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	z-index: 99;
+	button {
+		width: 100%;
+		color: $primary-solar-black;
+		font-size: 20px;
+		font-weight: 500;
+		font-family: var(--filson-pro);
+		border-radius: 26px;
+		height: 60px;
+		background: $secondary-sun-yellow;
+		border: none;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		gap: 16px;
+		@media (max-width: 400px) {
+			font-size: 4.5vw;
+			svg {
+				width: 6vw;
+				height: auto;
+			}
+		}
+	}
+	.inner {
+		padding-bottom: 20px;
+		padding-inline: 8px;
+		@media screen and (min-width: 576px) {
+			padding-inline: 16px;
+		}
+	}
+}
+// accordion section
+.accordion-section {
+	padding-bottom: 44px;
+}
+.accordion--item {
+	border-radius: 20px;
+	button {
+		display: flex;
+		align-items: center;
+		column-gap: 45px;
+		color: $primary-sky-white;
+		width: 100%;
+		background: transparent;
+		border: none;
+		height: 80px;
+		padding-inline: 20px;
+		@media (max-width: 400px) {
+			column-gap: 35px;
+			height: 70px;
+		}
+	}
+	.content {
+		border-radius: 20px;
+		min-height: 597px;
+		padding: 30px;
+		.title {
+			font-family: var(--filson-pro);
+			margin-bottom: 32px;
+			font-size: 40px;
+			font-weight: 500;
+			line-height: 1.3;
+			@media (max-width: 400px) {
+				font-size: 9vw;
+			}
+		}
+		@media (max-width: 400px) {
+			padding: 24px;
+			min-height: 540px;
+		}
+	}
+	&:nth-of-type(5n + 1) {
+		background: $primary-solar-black;
+	}
+	&:nth-of-type(5n + 2) {
+		background: $primary-contrast1;
+	}
+	&:nth-of-type(5n + 3) {
+		background: $primary-nature-green;
+	}
+	&:nth-of-type(5n + 4) {
+		background: $primary-green-energy;
+	}
+	&:nth-of-type(5n + 5) {
+		background: $primary-contrast2;
+		button {
+			color: $primary-solar-black;
+		}
+	}
+	// &:not(:first-child) {
+	position: relative;
+	&::before {
+		// background should same as parent background
+		content: "";
+		position: absolute;
+		// bottom: 50%;
+		bottom: -20px;
+		height: calc(100% + 40px);
+		width: 100%;
+		left: 0;
+		background: inherit;
+		z-index: -1;
+		transition: all ease 0.2s;
+	}
+	// }
+	&.opened {
+		&::before {
+			opacity: 0;
+		}
+	}
+}
+.info-list {
+	display: flex;
+	flex-direction: column;
+	gap: 13px;
+	padding: 0;
+	margin: 0;
+	font-family: var(--dm-sans);
+	li {
+		display: flex;
+		gap: 15px;
+		list-style: none;
+		font-weight: 600;
+		line-height: 21px;
+		span {
+			width: 0;
+			flex-grow: 1;
+		}
+		@media (max-width: 400px) {
+			svg {
+				width: 16px;
+				height: 16px;
+				margin-top: 2px;
+			}
+		}
+	}
+}
+.accordion-container {
+	border-radius: 20px;
+	overflow: hidden;
+}
+.cta-img {
+	img {
+		width: 100%;
+		border-radius: 30px;
+	}
+}
+.statistics-section {
+	padding-bottom: 42px;
+	padding-top: 24px;
+	padding-inline: 20px;
+	@media screen and (min-width: 576px) {
+		.container {
+			padding-inline: 30px;
+		}
+	}
+	@media screen and (max-width: 400px) {
+		padding-inline: 10px;
+	}
+}
+.statistics--item {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+	padding-bottom: 16px;
+	font-family: var(--filson-pro);
+	font-size: 15px;
+	font-weight: 400;
+	@media (max-width: 400px) {
+		font-size: 3.7vw;
+		svg {
+			max-width: 30px;
+			height: auto;
+		}
+	}
+}
+// footer
+footer {
+	background: $primary-sky-white;
+	.container {
+		padding-inline: 30px;
+		position: relative;
+		.footer-shape {
+			position: absolute;
+			right: 0;
+			top: -43px;
+		}
+		@media screen and (max-width: 400px) {
+			padding-inline: 20px;
+			.footer-shape {
+				width: 80px !important;
+				height: auto !important;
+			}
+		}
+	}
+}
+.footer-top {
+	padding-top: 43px;
+	padding-bottom: 54px;
+	.footer-logo {
+		img {
+			max-width: 100%;
+		}
+		margin-bottom: 72px;
+		@media (max-width: 400px) {
+			margin-bottom: 60px;
+		}
+	}
+	.subtitle {
+		font-family: var(--filson-pro);
+		font-weight: 500;
+		font-size: 16px;
+		line-height: 130%;
+		color: $primary-solar-black;
+		margin-bottom: 24px;
+	}
+	.subtext {
+		font-weight: 400;
+		font-size: 15px;
+		line-height: 130%;
+		color: $primary-solar-black;
+		font-family: var(--dm-sans);
+	}
+
+	@media screen and (max-width: 400px) {
+		.subtitle {
+			font-size: 3.85vw;
+		}
+		.subtext {
+			font-size: 3.7vw;
+		}
+	}
+}
+.footer-bottom {
+	border-top: 0.5px solid $primary-nature-green;
+	padding-top: 24px;
+	padding-bottom: 110px;
+	.subtitle {
+		font-family: var(--filson-pro);
+		font-weight: 700;
+		font-size: 20px;
+		line-height: 20px;
+		color: $primary-solar-black;
+		margin-bottom: 16px;
+	}
+	.copyright {
+		font-family: var(--dm-sans);
+		font-style: normal;
+		font-weight: 400;
+		font-size: 11px;
+		line-height: 25px;
+		color: $primary-solar-black;
+		display: flex;
+		flex-wrap: wrap;
+		gap: 10px;
+		span {
+			display: block;
+		}
+		a {
+			text-decoration-line: underline;
+			color: $primary-solar-black;
+		}
+	}
+	@media screen and (max-width: 400px) {
+		.subtitle {
+			font-size: 5.2vw;
+		}
+		.copyright {
+			font-size: 2.7vw;
+		}
+	}
+}
+.footer-button-group {
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: 32px;
+	row-gap: 16px;
+	margin-top: 24px;
+	@media screen and (max-width: 400px) {
+		column-gap: 16px;
+	}
+}
+.btn-1,
+.btn-2 {
+	height: 45px;
+	border-radius: 99px;
+	font-size: 15px;
+	color: $primary-solar-black;
+	border: none;
+	outline: none;
+	box-shadow: none;
+	flex-grow: 1;
+	max-width: 220px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 10px;
+	font-weight: 500;
+	@media screen and (max-width: 400px) {
+		font-size: 3.7vw;
+	}
+}
+
+.btn-1 {
+	background: $secondary-sun-yellow;
+}
+.btn-2 {
+	background: $primary-green-energy;
+}
+// reviews section
+.reviews-section {
+	padding-bottom: 38px;
+	padding-top: 53px;
+	.container {
+		padding-inline: 30px;
+		@media screen and (max-width: 400px) {
+			padding-inline: 20px;
+		}
+	}
+	.title {
+		font-weight: 500;
+		font-size: 30px;
+		line-height: 110%;
+		color: $primary-contrast1;
+		margin-bottom: 28px;
+		@media screen and (max-width: 400px) {
+			font-size: 7.5vw;
+		}
+	}
+	.trustpilot-logo {
+		// margin-bottom: 20px;
+		margin-bottom: 30px;
+	}
+}
+.reviews-item {
+	border-radius: 20px;
+	background: $primary-sky-white;
+	cursor: pointer;
+	.img {
+		border-radius: inherit;
+		overflow: hidden;
+		img {
+			width: 100%;
+			aspect-ratio: 330/250;
+		}
+	}
+	.content {
+		padding: 30px 35px;
+		.quote {
+			margin: 0;
+			font-weight: 400;
+			font-size: 20px;
+			line-height: 120%;
+			color: $primary-solar-black;
+			margin-bottom: 25px;
+		}
+		.name {
+			font-weight: 600;
+			font-size: 14.5312px;
+			line-height: 15px;
+			color: $primary-green-energy;
+			font-family: var(--dm-sans);
+		}
+
+		@media screen and (max-width: 400px) {
+			.quote {
+				font-size: 4.5vw;
+			}
+		}
+	}
+}
+.reviews-section {
+	overflow: hidden;
+	.swiper {
+		overflow: visible;
+	}
+	.swiper-slide {
+		width: 330px;
+		&:nth-of-type(3n + 1) {
+			margin-top: 30px;
+		}
+		&:nth-of-type(3n + 3) {
+			margin-top: 103px;
+		}
+		&:nth-of-type(3n + 1),
+		&:nth-of-type(3n + 3) {
+			.panel-roof {
+				bottom: calc(100% - 2px);
+				right: 45px;
+				z-index: -1;
+			}
+		}
+		.panel-roof {
+			position: absolute;
+			bottom: 0;
+			right: 5px;
+		}
+	}
 }
